--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "@example/basics",
+  "name": "jyblog",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "browserslist": [
     "defaults"
   ],
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/partytown": "^1.1.0",
-    "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.2",
-    "@astrojs/tailwind": "^3.1.0",
+    "@astrojs/rss": "^2.4.3",
     "astro": "^2.5.6",
-    "astro-icon": "^0.8.0",
-    "photoswipe": "^5.3.6",
-    "sharp": "^0.31.3",
-    "tailwindcss": "^3.2.7"
-  },
-  "devDependencies": {
     "postcss": "^8.4.21",
     "postcss-preset-env": "^8.0.1"
   }
