--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,6 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "preserve",
-    "allowJs": true,
-    "paths": {
-      "photoswipe/lightbox": [
-        "./node_modules/photoswipe/dist/types/lightbox/lightbox.d.ts"
-      ]
-    }
+    "allowJs": true
   }
 }
