--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/partytown": "^1.2.3",
-    "@astrojs/sitemap": "^2.0.2",
-    "@astrojs/rss": "^2.4.4",
-    "astro": "^2.10.12",
-    "postcss": "^8.4.28",
-    "postcss-preset-env": "^9.1.1"
+    "@astrojs/partytown": "^2.0.2",
+    "@astrojs/rss": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.3",
+    "astro": "^3.6.3",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
+    "marked": "^11.0.0",
+    "postcss": "^8.4.31",
+    "postcss-preset-env": "^9.3.0"
   }
 }
