--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/partytown": "^2.0.2",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.3",
-    "astro": "^3.6.3",
+    "@astrojs/partytown": "^2.0.3",
+    "@astrojs/rss": "^4.0.1",
+    "@astrojs/sitemap": "^3.0.4",
+    "astro": "^4.0.9",
     "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.2",
-    "marked": "^11.0.0",
-    "postcss": "^8.4.31",
+    "bootstrap-icons": "^1.11.3",
+    "marked": "^11.1.1",
+    "postcss": "^8.4.32",
     "postcss-preset-env": "^9.3.0"
+  },
+  "devDependencies": {
+    "sass": "^1.69.7"
   }
 }
